feat: 完成本地知识库与助手基础实现